--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-streamlit
-ultralytics
+streamlit==1.49.1
+ultralytics==8.3.193
+torch==2.8.0
+torchvision==0.23.0
+opencv-python==4.11.0.86
 pillow
+numpy
