--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ streamlit==1.49.1
 ultralytics==8.3.193
 torch==2.8.0
 torchvision==0.23.0
-opencv-python==4.11.0.86
+opencv-python
 pillow
-numpy
+gdown
