--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
+--extra-index-url https://download.pytorch.org/whl/cpu
 streamlit==1.49.1
 ultralytics==8.3.193
-torch==2.8.0
-torchvision==0.23.0
+torch==2.2.2+cpu
+torchvision==0.17.2+cpu
 opencv-python-headless==4.10.0.84
 pillow
 gdown
