--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 streamlit==1.49.1
 ultralytics==8.3.193
-torch==2.2.2+cpu
-torchvision==0.17.2+cpu
+torch==2.2.2
+torchvision==0.17.2
 opencv-python-headless==4.10.0.84
 pillow
 gdown
-
